@@ -1,5 +1,13 @@
 2001-04-23  Arturo Espinosa  <arturo@ximian.com>
 
+	* network.pl.in: init.d script for smb in Debian is samba.
+	* service.pl.in (xst_service_sysv_get_paths): Added paths for
+	  Debian and Mandrake.
+	* time-conf.in: Check for service availability and activation.
+	  Minor indentation fixes.
+	
+2001-04-23  Arturo Espinosa  <arturo@ximian.com>
+
 	* parse.pl.in (xst_parse_interfaces_option_str/kw): this code
 	  was passing invalid xst_report keys. How did this get here?
 
